[package]
name = "pallet-asset-manager"
authors = [ "PureStake" ]
edition = "2018"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Axlib
frame-support = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
frame-system = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
axia-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
sp-io = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
sp-runtime = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
sp-std = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }

# Axiaaxc
xcm = { git = "https://github.com/purestake/axiaaxc", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }

# Benchmarks
frame-benchmarking = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1" }
sp-core = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
	"xcm/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = [ "frame-support/try-runtime" ]
