[package]
name = "pallet-ethereum-chain-id"
authors = [ "PureStake" ]
edition = "2018"
version = "1.0.0"

[dependencies]
serde = { version = "1.0.101", optional = true, features = [ "derive" ] }

# Axlib
frame-support = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
frame-system = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
axia-scale-codec = { version = "2.2", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"serde",
]
try-runtime = [ "frame-support/try-runtime" ]
