[package]
name = "xcm-transactor"
authors = [ "PureStake" ]
edition = "2018"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Axlib
frame-support = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
frame-system = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
axia-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
sp-io = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
sp-runtime = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
sp-std = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axiaaxc-v0.9.15", default-features = false }

# Axiaaxc / XCM
orml-traits = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
xcm = { git = "https://github.com/purestake/axiaaxc", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
xcm-builder = { git = "https://github.com/purestake/axiaaxc", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }
xcm-executor = { git = "https://github.com/purestake/axiaaxc", branch = "moonbeam-axiaaxc-v0.9.15-1", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1" }
pallet-timestamp = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1" }
pallet-xcm = { git = "https://github.com/purestake/axiaaxc", branch = "moonbeam-axiaaxc-v0.9.15-1" }
axia-scale-codec = { version = "2.1.1" }
sp-core = { git = "https://github.com/purestake/axlib", branch = "moonbeam-axiaaxc-v0.9.15-1" }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"axia-scale-codec/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm-primitives/std",
	"xcm/std",
]
try-runtime = [ "frame-support/try-runtime" ]
